--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -226,3 +226,67 @@ p{
 .high {
   background: #ffc600;
 }
+
+.user_authorization_form {
+  padding: 10px;
+  margin: 5px;
+}
+
+.user_registration_form {
+  padding: 10px;
+  margin: 5px;
+}
+
+@media screen and (prefers-color-scheme: dark) {
+  body {
+    background: #ADADAD;
+    
+      }
+}
+
+.user_registration_form:hover {
+  background: #8a8a86a9;
+  border-radius: 10px;
+}
+
+.user_authorization_form:hover {
+  background: #8a8a86a9;
+  border-radius: 10px;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+a:hover {
+  color: inherit;
+  text-decoration: none;
+}
+
+.song_item {
+  margin: 5px;
+  padding: 2px;
+}
+
+.song_item:hover {
+  transition-duration: 0.5s;
+  background: rgba(120, 181, 228, 0.479);
+}
+
+.a_link:hover {
+  color: inherit;
+  text-decoration: none;
+  background: rgba(75, 157, 219, 0.479);
+  border: 3px solid transparent;
+  border-color: #65994C;
+  border-radius: 10px;
+  border-collapse: collapse;
+}
+
+.a_link_mus:hover {
+  color: inherit;
+  text-decoration: none;
+  transition-duration: 2s;
+  background: rgba(75, 157, 219, 0.479);
+}
