--- a/public/stylesheets/styleMainPage.css
+++ b/public/stylesheets/styleMainPage.css
@@ -40,16 +40,6 @@ p{
   text-align:justify;
 }
 
-#stolbecTracks{
-  text-align: center;
-  background-color: rgb(179, 222, 236)
-}
-
-.textArray{
-  text-align: center;
-  background-color: rgb(85, 196, 233)
-}
-
 .titleDataUpdate {
   text-align: center;
 }
@@ -86,21 +76,6 @@ p{
   display: inline-block;
   place-items:inherit;
   width:100%;
-}
-
-.dark-theme {
-  background-color: #000000;
-  color: #FFFFFF;
-}
-
-.normal-theme {
-  background-color: #B8FFF7;
-  color: #C53131;
-}
-
-.light-theme {
-  background-color: #FFFFFF;
-  color: #000000;
 }
 
 .song_item {
@@ -236,3 +211,47 @@ p{
 .high {
   background: #ffc600;
 }
+
+@media screen and (prefers-color-scheme: dark) {
+  body {
+    background: #C2CAD0;
+      }
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+a:hover {
+  color: inherit;
+  text-decoration: none;
+}
+
+.song_item {
+  margin: 5px;
+  padding: 2px;
+}
+
+.song_item:hover {
+  transition-duration: 0.5s;
+  background: rgba(120, 181, 228, 0.863);
+}
+
+.a_link:hover {
+  color: inherit;
+  text-decoration: none;
+  background: rgba(75, 157, 219, 0.479);
+  border: 3px solid transparent;
+  border-color: #65994C;
+  border-radius: 10px;
+  border-collapse: collapse;
+}
+
+.a_link_mus:hover {
+  color: inherit;
+  text-decoration: none;
+  transition-duration: 2s;
+  background: rgba(75, 157, 219, 0.479);
+}
+
