--- a/views/listMusic.pug
+++ b/views/listMusic.pug
@@ -13,7 +13,7 @@ block listMusic
                                 div(class="song_content" data_song_id=val._id)
                                     a(class="song_name a_link_mus" href=val.getMusic) #{val.name}
                                 div(class="playlistData" data_song_id=val._id)
-                                    button(type="button" class="btn btn-primary buttonTrackData" data_song_id=val._id data-toggle="modal" data-target="#exampleModal3") + 
+                                    button(type="button" class="btn btn-outline-primary buttonTrackData" data_song_id=val._id data-toggle="modal" data-target="#exampleModal3") + 
                                     div(class="modal" id="exampleModal3" modal_song_id=`modal_song_id-${val._id}`)
                                         div(class="modal-dialog" role="document")
                                             div(class="modal-content" data_song_id=val._id)
