--- a/views/adminPage_MyMusicDetail.pug
+++ b/views/adminPage_MyMusicDetail.pug
@@ -51,4 +51,7 @@ block adminPage_MyMusicDetail
             div(class="row")
                 div(class="col")
                     button(class="btn btn-success btn_submit_send_data" type="submit") Подтвердить изменнеие
+    div(class="fixed-bottom") 
+          div(class="footerText")
+            p По всем вопросам можно обращаться ко мне на почту - alexy.alexy98@mail.ru
     script(src="/javascripts/adminPage_MyMusicDetail.js") 
