--- a/views/auth_users.pug
+++ b/views/auth_users.pug
@@ -39,3 +39,6 @@ block auth_users
                                 for error in errorsMSG 
                                     li!= error.msg 
             div(class="col-3")
+    div(class="fixed-bottom") 
+          div(class="footerText")
+            p По всем вопросам можно обращаться ко мне на почту - alexy.alexy98@mail.ru
