--- a/views/detailMusic.pug
+++ b/views/detailMusic.pug
@@ -17,4 +17,7 @@ block detailMusic
                 textarea#description.form-control(rows="3" name='description' require='true' readonly=true) #{resData.description}
             div(class="user_Creator")
                 p Автор композиции: #{resData.userIdCreated.login}
+    div(class="fixed-bottom") 
+          div(class="footerText")
+            p По всем вопросам можно обращаться ко мне на почту - alexy.alexy98@mail.ru
 
