--- a/views/login_users.pug
+++ b/views/login_users.pug
@@ -35,3 +35,6 @@ block login_users
                                 for error in errorsMSG 
                                     li!= error.msg
             div(class="col-3")
+    div(class="fixed-bottom") 
+          div(class="footerText")
+            p По всем вопросам можно обращаться ко мне на почту - alexy.alexy98@mail.ru
