--- a/views/main_listJanrs.pug
+++ b/views/main_listJanrs.pug
@@ -15,4 +15,7 @@ block main_listJanrs
                             tr(class="userItemString")
                                 th(class="janr_item_Colomn" scope="col" id=janr_item._id name=janr_item.name) 
                                     a(href=`/v1/api/main/janrs/${janr_item._id}`) #{janr_item.name}
+    div(class="fixed-bottom") 
+          div(class="footerText")
+            p По всем вопросам можно обращаться ко мне на почту - alexy.alexy98@mail.ru
             
