--- a/views/main_myProfile.pug
+++ b/views/main_myProfile.pug
@@ -81,4 +81,7 @@ block main_myProfile
                         button(class="btn btn-primary btn_editProfileData" type="submit") Изменить профиль 
                 button(class="btn btn-info btnSendAuthUserData hidden" type="submit") Изменить login/email
                 button(class="btn btn-info btnSendProfileUserData hidden" type="submit") Изменить профиль
+    div(class="fixed-bottom") 
+          div(class="footerText")
+            p По всем вопросам можно обращаться ко мне на почту - alexy.alexy98@mail.ru
     script(src="/javascripts/main_myProfile.js") 
