--- a/views/main_pageUserInfo.pug
+++ b/views/main_pageUserInfo.pug
@@ -69,4 +69,7 @@ block main_pageUserInfo
                                 button(type="submit" class="btn btn-secondary btn_redirect" dataForRedirect=playlistItem.getUsersPlaylists) #{playlistItem.name} 
                         else 
                             p У пользователя нет плэйлистов
+    div(class="fixed-bottom") 
+          div(class="footerText")
+            p По всем вопросам можно обращаться ко мне на почту - alexy.alexy98@mail.ru
     script(src="/javascripts/main_pageUsersInfo.js") 
