--- a/views/main_pageUsers.pug
+++ b/views/main_pageUsers.pug
@@ -15,3 +15,6 @@ block main_pageUsers
                         th(class="UserItemColomn" scope="col" id=userItem._id name=userItem.login) 
                             a(href=`/v1/api/main/users/${userItem._id}`) #{userItem.login}
                         th(class="UserItemColomn" scope="col" id=userItem._id name=userItem.email) #{userItem.email}
+    div(class="fixed-bottom") 
+          div(class="footerText")
+            p По всем вопросам можно обращаться ко мне на почту - alexy.alexy98@mail.ru
