--- a/views/pageJanrs.pug
+++ b/views/pageJanrs.pug
@@ -33,4 +33,7 @@ block pageJanrs
                         div(class="col-sm")
                             button(class="btn btn-success sendNewJanr" type="submit") Создать
                 div(class="col-sm-2")
+    div(class="fixed-bottom") 
+          div(class="footerText")
+            p По всем вопросам можно обращаться ко мне на почту - alexy.alexy98@mail.ru
     script(src="/javascripts/pageJanrs.js") 
