--- a/views/pageRoles.pug
+++ b/views/pageRoles.pug
@@ -38,4 +38,7 @@ block pageRoles
                                             each itemPropInRoles in itemRole.values 
                                                 li(class="list-group-item" id=(itemPropInRoles._id))
                                                     div(class="item-prop" id=(itemPropInRoles._id)) #{itemPropInRoles.name} 
+    div(class="fixed-bottom") 
+          div(class="footerText")
+            p По всем вопросам можно обращаться ко мне на почту - alexy.alexy98@mail.ru
     script(src="/javascripts/pageRoles.js") 
