--- a/views/pageRolesInfo.pug
+++ b/views/pageRolesInfo.pug
@@ -32,5 +32,8 @@ block pageRolesInfo
                             button(type="submit" class="btn btn-warning btnForDelete" id=dataRoles.dataRolesById._id) Удалить роль из системы
                         div(class="back")
                             button(type="submit" class="btn btn-secondary btn_back_to_roles") Назад
+    div(class="fixed-bottom") 
+          div(class="footerText")
+            p По всем вопросам можно обращаться ко мне на почту - alexy.alexy98@mail.ru
     script(src="/javascripts/pageRolesInfo.js") 
                         
