--- a/views/pageUsersInfo.pug
+++ b/views/pageUsersInfo.pug
@@ -88,4 +88,7 @@ block pageUsersInfo
                             button(type="submit" class="btn btn-secondary" onClick=`location.href="http://localhost:3000${playlistItem.getUsersPlaylists_admin}"`) #{playlistItem.name} 
                     else 
                         p У пользователя нет плэйлистов
+    div(class="fixed-bottom") 
+          div(class="footerText")
+            p По всем вопросам можно обращаться ко мне на почту - alexy.alexy98@mail.ru
     script(src="/javascripts/pageUsersInfo.js") 
