--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,10 +1,27 @@
 body {
   padding: 5px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background-color: #0e1416;
+  color: #b99e9e;
 }
 
 a {
-  color: #00B7FF;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #ff0037;
+  text-decoration: none;
+}
+
+.a_link_mus {
+  text-decoration: none;
+  color: #b99e9e;
+}
+
+.nav-link {
+  color: inherit;
+  text-decoration: none;
 }
 
 .hidden {
@@ -37,11 +54,6 @@ p{
 .p{
   width:100%;
   text-align:justify;
-}
-
-#stolbecTracks{
-  text-align: center;
-  background-color: rgb(179, 222, 236)
 }
 
 .textArray{
@@ -87,27 +99,28 @@ p{
   width:100%;
 }
 
-.dark-theme {
-  background-color: #000000;
-  color: #FFFFFF;
-}
-
-.normal-theme {
-  background-color: #B8FFF7;
-  color: #C53131;
-}
-
-.light-theme {
-  background-color: #FFFFFF;
-  color: #000000;
-}
-
 .song_item {
   display: flex;
   position: relative;
   padding: 1px;
   width: 100%;
   box-sizing: border-box;
+  margin: 5px;
+  padding: 2px;
+  background-color: #2B3C5B;
+}
+
+.song_name {
+  text-decoration: none;
+  color: #b99e9e;
+}
+
+.song_name:hover {
+  color: #ff0037;
+}
+
+.line {
+  border-bottom: 1px solid #f00;
 }
 
 .button_play {
@@ -237,13 +250,6 @@ p{
   margin: 5px;
 }
 
-@media screen and (prefers-color-scheme: dark) {
-  body {
-    background: #ADADAD;
-    
-      }
-}
-
 .user_registration_form:hover {
   background: #8a8a86a9;
   border-radius: 10px;
@@ -254,39 +260,15 @@ p{
   border-radius: 10px;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-a:hover {
-  color: inherit;
-  text-decoration: none;
-}
-
 .song_item {
+  display: flex;
+  position: relative;
+  padding: 1px;
+  width: 100%;
+  box-sizing: border-box;
   margin: 5px;
   padding: 2px;
+  background-color: #2B3C5B;
 }
 
-.song_item:hover {
-  transition-duration: 0.5s;
-  background: rgba(120, 181, 228, 0.479);
-}
 
-.a_link:hover {
-  color: inherit;
-  text-decoration: none;
-  background: rgba(75, 157, 219, 0.479);
-  border: 3px solid transparent;
-  border-color: #65994C;
-  border-radius: 10px;
-  border-collapse: collapse;
-}
-
-.a_link_mus:hover {
-  color: inherit;
-  text-decoration: none;
-  transition-duration: 2s;
-  background: rgba(75, 157, 219, 0.479);
-}
