--- a/public/stylesheets/styleMainPage.css
+++ b/public/stylesheets/styleMainPage.css
@@ -1,10 +1,18 @@
 body {
   padding: 5px;
-   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background-color: #0e1416;
+  color: #b99e9e;
 }
 
+
+
 a {
-  color: #00B7FF;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #ff0037;
 }
 
 .hidden {
@@ -21,7 +29,6 @@ a {
   margin-left: auto;
   margin-right: auto;
   text-align: center;
-  /* position: absolute; */
   top: 50%;
   width: 100%;
 }
@@ -78,14 +85,6 @@ p{
   width:100%;
 }
 
-.song_item {
-  display: flex;
-  position: relative;
-  padding: 1px;
-  width: 100%;
-  box-sizing: border-box;
-}
-
 .button_play {
   position: absolute;
   z-index: 1;
@@ -132,7 +131,6 @@ p{
   background: #2B3C5B;
   border-radius: 5px;
   height: 6px;
-  /* width: 150px; */
 }
 
 .button_play {
@@ -158,7 +156,6 @@ p{
   width: 100px;
   height: 10px;
   margin-top: 15px;
-  /* display: flex; */
   align-items: center;
   cursor: pointer;
   position:absolute;
@@ -169,7 +166,6 @@ p{
   background: #2B3C5B;
   border-radius: 5px;
   height: 6px;
-  /* width: 50px; */
 }
 
 .dataPlaylistItems {
@@ -189,13 +185,6 @@ p{
   height: 24px!important;
 }
 
-/* .button_play_image{
-  width: 24px;
-  height: 24px;
-  position: absolute;
-  border-radius: 5px;
-} */
-
 .btn_delete_icon {
   background-image: url(/img/delete_icon.png);
 }
@@ -212,46 +201,36 @@ p{
   background: #ffc600;
 }
 
-@media screen and (prefers-color-scheme: dark) {
-  body {
-    background: #C2CAD0;
-      }
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-a:hover {
-  color: inherit;
-  text-decoration: none;
-}
-
 .song_item {
+  display: flex;
+  position: relative;
+  padding: 1px;
+  width: 100%;
+  box-sizing: border-box;
   margin: 5px;
   padding: 2px;
+  background-color: #2B3C5B;
 }
 
-.song_item:hover {
-  transition-duration: 0.5s;
-  background: rgba(120, 181, 228, 0.863);
+.song_name {
+  text-decoration: none;
+  color: #b99e9e;
 }
 
-.a_link:hover {
+.song_name:hover {
+  color: #ff0037;
+}
+
+.nav-link {
   color: inherit;
   text-decoration: none;
-  background: rgba(75, 157, 219, 0.479);
-  border: 3px solid transparent;
-  border-color: #65994C;
-  border-radius: 10px;
-  border-collapse: collapse;
 }
 
-.a_link_mus:hover {
-  color: inherit;
+.a_link_mus {
   text-decoration: none;
-  transition-duration: 2s;
-  background: rgba(75, 157, 219, 0.479);
+  color: #b99e9e;
 }
 
+.line {
+  border-bottom: 1px solid #f00;
+}
