--- a/views/adminPage.pug
+++ b/views/adminPage.pug
@@ -7,7 +7,7 @@ html
     link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous")
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
-    nav(class="navbar navbar-expand bg-body-tertiary")
+    nav(class="navbar navbar-expand bg-body-tertiary g-3")
       div(class="container-fluid justify-content-between")
         div(class="collapse navbar-collapse" id="navbarSupportedContent")
           ul(class="navbar-nav me-auto mb-2 ")
@@ -42,11 +42,12 @@ html
           div(class="d-flex justify-content-end")
             input(class="form-control me-2 searchData" type="text" name="searchData" placeholder="Поиск" aria-label="Поиск") 
             button(class="btn btn-outline-success btn_global_search" type="submit") Найти
+    div(class="line")
     br
-    div(class="container text-center")
+    div(class="container text-center g-3")
       div(class="row align-items-start")
-        div(class="col-xl-2 col-lg-2 col-md-1 col-sm")
-          p Данные 
+        div(class="col-xl-2 col-lg-2 col-md-1 col-sm leftData")
+          div(class="child_leftData")
         div(class="col-xl-8 col-lg-8 col-md-10 col-sm-12")
           div(class="row")
             div(class="col")
@@ -78,8 +79,8 @@ html
           block adminPage_detailPlaylist_byUser
           block adminPage_detailPlaylist
           block adminPage_searchList
-        div(class="col-xl-2 col-lg-2 col-md-1 col-sm")
-          p Данные 2
+        div(class="col-xl-2 col-lg-2 col-md-1 col-sm rightData")
+          div(class="child_rightData")
     script(src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous")
     script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous")
     script(src="/javascripts/adminPage.js") 
