--- a/views/admin_listPlaylists.pug
+++ b/views/admin_listPlaylists.pug
@@ -15,4 +15,7 @@ block admin_listPlaylists
                                     a(href=`https://mytestferssite.ru/v1/api/adminCatalog/playlists/${valList._id}`) #{valList.name} 
                                 h5 Пользователь - 
                                     a(href=`https://mytestferssite.ru/v1/api/adminCatalog/users/${valList.userId._id}`) #{valList.userId.login}
+    div(class="fixed-bottom") 
+          div(class="footerText")
+            p По всем вопросам можно обращаться ко мне на почту - alexy.alexy98@mail.ru
                         
