--- a/views/admin_myProfile.pug
+++ b/views/admin_myProfile.pug
@@ -79,4 +79,7 @@ block admin_myProfile
                         button(class="btn btn-primary btn_editProfileData" type="submit") Изменить профиль 
                 button(class="btn btn-info btnSendAuthUserData hidden" type="submit") Изменить login/email
                 button(class="btn btn-info btnSendProfileUserData hidden" type="submit") Изменить профиль
+    div(class="fixed-bottom") 
+          div(class="footerText")
+            p По всем вопросам можно обращаться ко мне на почту - alexy.alexy98@mail.ru
     script(src="/javascripts/admin_pageUsersInfo.js") 
