--- a/views/authorization_user.pug
+++ b/views/authorization_user.pug
@@ -10,6 +10,9 @@ html
     div(class="bg-body-tertiary")
       block auth_users
       block login_users
+    div(class="fixed-bottom") 
+          div(class="footerText")
+            p По всем вопросам можно обращаться ко мне на почту - alexy.alexy98@mail.ru
     script(src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous")
     script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous")
     script(src="/javascripts/authorization_users.js") 
