--- a/views/main_InfoJanr.pug
+++ b/views/main_InfoJanr.pug
@@ -15,4 +15,7 @@ block main_InfoJanr
                 div(class="row")
                     div(class="col")
                         button(class="btn btn-secondary btn_for_back" type="submit") Назад
+    div(class="fixed-bottom") 
+          div(class="footerText")
+            p По всем вопросам можно обращаться ко мне на почту - alexy.alexy98@mail.ru
     script(src="/javascripts/main_InfoJanr.js") 
