--- a/views/main_searchList.pug
+++ b/views/main_searchList.pug
@@ -65,5 +65,8 @@ block main_searchList
                     div(class="btn change_size__volume hideClass")
                         div(class="size_volume")
         div(class="col-lg-2")
+    div(class="fixed-bottom") 
+          div(class="footerText")
+            p По всем вопросам можно обращаться ко мне на почту - alexy.alexy98@mail.ru
     script(src="/javascripts/main_searchList.js")
     
