--- a/views/pageRights.pug
+++ b/views/pageRights.pug
@@ -8,3 +8,6 @@ block pageRights
         div(class="rights")
             each itemProp in dataProperties
                 div(class="item-rights" id=(itemProp._id)) #{itemProp.name}
+    div(class="fixed-bottom") 
+          div(class="footerText")
+            p По всем вопросам можно обращаться ко мне на почту - alexy.alexy98@mail.ru
