--- a/views/adminPage.pug
+++ b/views/adminPage.pug
@@ -39,6 +39,12 @@ html
                     a(class="nav-link" aria-current="page" href="/v1/api/adminCatalog/myCompositions") Мои композиции
                   li
                     a(class="nav-link" aria-current="page" href="/v1/api/adminCatalog/myPlaylists") Мои плэйлисты  
+                  li
+                    a(class="nav-link" aria-current="page" href="/v1/api/authorization/login") Авторизация
+                  li 
+                    a(class="nav-link" aria.current="page" href="/v1/api/authorization/signUp") Регистрация
+                  li 
+                    a(class="nav-link" aria-current="page" href="/v1/api/main/logOut") Выйти
           div(class="d-flex justify-content-end")
             input(class="form-control me-2 searchData" type="text" name="searchData" placeholder="Поиск" aria-label="Поиск") 
             button(class="btn btn-outline-success btn_global_search" type="submit") Найти
