--- a/views/login_users.pug
+++ b/views/login_users.pug
@@ -5,6 +5,7 @@ block login_users
     div(class="row")
         div(class="d-flex justify-content-center")
             h1=title 
+    div(class="line")
     br
     div(class=`content $gray-800`)
         div(class="row g-3")
@@ -22,7 +23,7 @@ block login_users
                                 input(class="form-control" type='text' id="pass" placeholder='Password' name='pass' value=(undefined===pass ? '' : user.pass), required='true')
                         div(class="row")
                             div(class="d-flex justify-content-center")
-                                button(class="btn btn-primary justify-content-center" type='submit') Войти 
+                                button(class="btn btn-sm btn-outline-secondary" type='submit') Войти 
                         .IN 
                             div(class="hstack gap-3")
                                 div(class="p-2 ms-auto")
