--- a/views/main_InfoJanr.pug
+++ b/views/main_InfoJanr.pug
@@ -4,16 +4,18 @@ block main_InfoJanr
 
     h1(class="align-middle" style='display: inline; padding-right:10px;')=title+' - '+dataJanrItem.name
 
-    div(class="content")
+    div(class="border border-2 rounded-4 content g-3")
         div(class="row")
-            div(class="col-sm")
-                div(class="card")
-                    div(class="card-body")
-                        h5(class="card-title") Жанр #{dataJanrItem.name}
-                        h6(class="card-subtitle mb-2 text-body-secondary") Описание жанра
-                        p(class="card-text") #{dataJanrItem.descriptions}
+            div(class="col-sm g-3")
                 div(class="row")
-                    div(class="col")
+                    div(class="col g-3")
+                        h5(class="card-title") Название жанра: #{dataJanrItem.name}
+                div(class="row")
+                    div(class="col g-3")
+                        h6(class="card-subtitle mb-2 text-body-secondary") Описание жанра
+                        p(class="text-center") #{dataJanrItem.descriptions}
+                div(class="row")
+                    div(class="col g-3")
                         button(class="btn btn-secondary btn_for_back" type="submit") Назад
     div(class="fixed-bottom") 
           div(class="footerText")
