--- a/views/main.pug
+++ b/views/main.pug
@@ -36,6 +36,8 @@ html
                     a(class="nav-link" aria.current="page" href="/v1/api/authorization/signUp") Регистрация
                   li 
                     a(class="nav-link" aria-current="page" href="/v1/api/main/logOut") Выйти
+                  li 
+                    a(class="nav-link" aria-current="page" href="/v1/api/adminCatalog") Админпанель
           div(class="d-flex justify-content-end")
             input(class="form-control me-2 searchData" type="text" name="searchData" placeholder="Поиск" aria-label="Поиск") 
             button(class="btn btn-outline-success btn_global_search" type="submit") Найти
