--- a/views/main_InfoJanr.pug
+++ b/views/main_InfoJanr.pug
@@ -10,8 +10,8 @@ block main_InfoJanr
                 div(class="row")
                     div(class="col g-3")
                         h5(class="card-title") Название жанра: #{dataJanrItem.name}
-                div(class="row")
-                    div(class="col g-3")
+                div(class="row g-3")
+                    div(class="col g-4")
                         h6(class="card-subtitle mb-2 text-body-secondary") Описание жанра
                         p(class="text-center") #{dataJanrItem.descriptions}
                 div(class="row")
