add score for composition bak-end

--- a/views/detailMusic.pug
+++ b/views/detailMusic.pug
@@ -20,4 +20,5 @@ block detailMusic
     div(class="fixed-bottom") 
           div(class="footerText")
             p По всем вопросам можно обращаться ко мне на почту - alexy.alexy98@mail.ru
+    script(src="/javascripts/mainPage_detailMusic.js") 
 
