--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,13 +1,21 @@
+/* :values {
+  --dark-theme-background-color: #0e1416;
+  --dark-theme-color: #b99e9e;
+  --theme-background-color: #d3cfcf;
+  --theme-color: #111e22;
+  --theme-background-color-for-songItem: #464438;
+} */
+
 body {
   padding: 5px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  background-color: #0e1416;
-  color: #b99e9e;
+  background-color: var(--theme-background-color, #d3cfcf);
+  color: var(--theme-color, #111e22);
 }
 
 h1, h2, h3, h4, h5, h6, h7 {
   font: "Lucida Grande", Helvetica, Arial, sans-serif;
-  color: #b99e9e;
+  color: var(--theme-color, #111e22);
 }
 
 a {
@@ -21,7 +29,7 @@ a:hover {
 
 .a_link_mus {
   text-decoration: none;
-  color: #b99e9e;
+  color: var(--theme-color, #111e22);
 }
 
 .nav-link {
@@ -47,10 +55,6 @@ a:hover {
   width: 100%;
 }
 
-.page-header{
-  background-color: rgb(179, 222, 236);
-}
-
 p{
   width:100%;
   text-align:justify;
@@ -63,7 +67,6 @@ p{
 
 .textArray{
   text-align: center;
-  background-color: rgb(85, 196, 233)
 }
 
 .titleDataUpdate {
@@ -112,12 +115,12 @@ p{
   box-sizing: border-box;
   margin: 5px;
   padding: 2px;
-  background-color: #2B3C5B;
+  background-color: #adc3ec;
 }
 
 .song_name {
   text-decoration: none;
-  color: #b99e9e;
+  color: var(--theme-color, #111e22);
 }
 
 .song_name:hover {
@@ -257,17 +260,6 @@ p{
 .user_registration_form {
   padding: 10px;
   margin: 5px;
-}
-
-.song_item {
-  display: flex;
-  position: relative;
-  padding: 1px;
-  width: 100%;
-  box-sizing: border-box;
-  margin: 5px;
-  padding: 2px;
-  background-color: #2B3C5B;
 }
 
 
